<resources>
    <string name="disable_tethering">Disable tethering</string>
    <string name="enable_tethering">Enable tethering</string>
    <string name="plugin_action">Plugin action:</string>
    <string name="no_system_warning">If plugin still does not work, you can try installing it to the system. This requires root access.</string>
    <string name="no_settings_permission_warning">Plugin will not work without app being granted system settings permission.</string>
    <string name="install_app_to_the_system">Install app to the system</string>
    <string name="open_settings">Open settings</string>

    <string name="unknown_error">Unknown error</string>
    <string name="no_root">Your device does not appear to be rooted.</string>
    <string name="install_success">Install successful</string>
    <string name="install_failed">Install failed</string>
    <string name="reboot_request">Please reboot your phone to make system recognize new system app</string>
    <string name="toggle_tethering">Toggle Tethering</string>
    <string name="error_no_settings_permission">No \"modify system settings\" permission. Open config dialog.\n\n</string>
    <string name="error_root_needed">System install (ROOT) needed. Open config dialog.\n\n</string>
</resources>
