<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="com.matejdro.taskertethercontrol.TetherSetupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/plugin_action"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/enableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_tethering"/>

        <RadioButton
            android:id="@+id/disableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_tethering"/>

    </RadioGroup>

    <TextView
        android:id="@+id/warning_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:drawableStart="@drawable/ic_warning"
        tools:text="@string/no_settings_permission_warning" />


    <Button
        android:id="@+id/action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fixPermissions"
        android:text="@string/open_settings"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


</LinearLayout>
